POST and limiting on /stream endpoint

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - COMPLETE WITH REDIS SESSION MANAGEMENT AND ADMIN ROUTES
+# nginx/nginx.conf - ENHANCED WITH RATE LIMITING AND TIMEOUT FIXES
 worker_processes auto;
 error_log /var/log/nginx/error.log info;
 pid /var/run/nginx.pid;
@@ -30,19 +30,46 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
+    # =============================================================================
+    # RATE LIMITING CONFIGURATION - NEW SECURITY LAYER
+    # =============================================================================
+    
+    # Rate limiting zones - Different limits for different endpoint types
+    limit_req_zone $binary_remote_addr zone=auth:10m rate=5r/m;      # Auth: 5 requests/minute
+    limit_req_zone $binary_remote_addr zone=chat:10m rate=15r/m;     # Chat: 15 requests/minute  
+    limit_req_zone $binary_remote_addr zone=guest:10m rate=2r/m;     # Guest: 2 requests/minute
+    limit_req_zone $binary_remote_addr zone=admin:10m rate=10r/m;    # Admin: 10 requests/minute
+    limit_req_zone $binary_remote_addr zone=general:10m rate=30r/m;  # General: 30 requests/minute
+    
+    # Connection limiting - Max concurrent connections per IP
+    limit_conn_zone $binary_remote_addr zone=addr:10m;
+    
+    # Rate limit logging
+    log_format rate_limit '$remote_addr - $remote_user [$time_local] '
+                         '"$request" $status $body_bytes_sent '
+                         '"$http_referer" "$http_user_agent" '
+                         'rt=$request_time ut="$upstream_response_time" '
+                         'rl="$limit_req_status"';
+
+    # =============================================================================
+    # TIMEOUT CONFIGURATION - FIXED AND TIERED
+    # =============================================================================
+    
+    # Client timeouts - NEW PROTECTION
+    client_body_timeout 60s;
+    client_header_timeout 60s;
+    client_max_body_size 10M;
+    
     # CRITICAL: Disable ALL buffering for streaming
     sendfile        off;  # DISABLED for streaming
     tcp_nopush      off;  # DISABLED for streaming
     tcp_nodelay     on;   # ENABLED for immediate delivery
     keepalive_timeout  65;
 
-    # STREAMING: No buffering anywhere - EXTENDED TIMEOUTS TO 10 MINUTES
+    # STREAMING: No buffering anywhere
     proxy_buffering off;
     proxy_request_buffering off;
     proxy_http_version 1.1;
-    proxy_read_timeout 600s;  # 10 minute timeout
-    proxy_send_timeout 600s;  # 10 minute timeout
-    proxy_connect_timeout 30s; # Connection timeout
     
     # STREAMING: No compression for SSE
     gzip off;  # DISABLED - gzip breaks streaming
@@ -50,13 +77,11 @@ http {
     resolver 127.0.0.11 ipv6=off;
     lua_package_path "/usr/local/openresty/nginx/lua/?.lua;;";
     
-    # STREAMING: Lua settings - EXTENDED TO 60 MINUTES
-    lua_socket_keepalive_timeout 3600s;
-    lua_socket_read_timeout 3600s;
-    lua_socket_send_timeout 3600s;
-    lua_socket_connect_timeout 3600s;
-
-    # NO SHARED MEMORY - ALL SESSION MANAGEMENT IN REDIS
+    # FIXED: Lua settings - REASONABLE TIMEOUTS
+    lua_socket_keepalive_timeout 300s;   # 5 minutes (was 3600s)
+    lua_socket_read_timeout 600s;        # 10 minutes for AI responses (was 3600s)
+    lua_socket_send_timeout 600s;        # 10 minutes (was 3600s)  
+    lua_socket_connect_timeout 30s;      # 30 seconds (was 3600s) - CRITICAL FIX
 
     # CLOUDFLARE PROXY CONFIGURATION
     # Set real IP from Cloudflare
@@ -91,6 +116,16 @@ http {
         listen 443;
         server_name ai.junder.uk localhost;
 
+        # =============================================================================
+        # GLOBAL RATE LIMITING - APPLY TO ALL LOCATIONS
+        # =============================================================================
+        
+        # Global connection limit per IP
+        limit_conn addr 10;
+        
+        # Global rate limit (applies to unspecified locations)
+        limit_req zone=general burst=10 nodelay;
+
         # Handle both Cloudflare proxied and direct localhost access
         set $forwarded_scheme $scheme;
         if ($http_x_forwarded_proto) {
@@ -112,20 +147,26 @@ http {
             set $is_localhost 1;  # Local networks
         }
 
-        # STATIC ASSETS - Only exception to default block
+        # =============================================================================
+        # STATIC ASSETS - MINIMAL RATE LIMITING
+        # =============================================================================
+        
         location /js/ {
+            limit_req zone=general burst=20 nodelay;  # Higher burst for assets
             root /usr/local/openresty/nginx/dynamic_content;
             expires 48h;
             add_header Cache-Control "public, immutable";
         }
         
         location /css/ {
+            limit_req zone=general burst=20 nodelay;  # Higher burst for assets
             root /usr/local/openresty/nginx/dynamic_content;
             expires 48h;
             add_header Cache-Control "public, immutable";
         }
         
         location /static/ {
+            limit_req zone=general burst=20 nodelay;  # Higher burst for assets
             root /usr/local/openresty/nginx/dynamic_content;
             expires 48h;
             add_header Cache-Control "public, immutable";
@@ -137,10 +178,12 @@ http {
             access_log off;
         }
 
-        # WHITELISTED ROUTES - All go through aaa_is_who for permission checking
+        # =============================================================================
+        # TEMPLATE ROUTES - MODERATE RATE LIMITING
+        # =============================================================================
         
-        # Template routes
         location = /login {
+            limit_req zone=auth burst=5 nodelay;  # Allow burst for page loads
             content_by_lua_block {
                 local aaa_is_who = require "aaa_is_who"
                 aaa_is_who.route_to_handler("login")
@@ -148,6 +191,7 @@ http {
         }
 
         location = /register {
+            limit_req zone=auth burst=5 nodelay;  # Allow burst for page loads
             content_by_lua_block {
                 local aaa_is_who = require "aaa_is_who"
                 aaa_is_who.route_to_handler("register")
@@ -155,6 +199,7 @@ http {
         }
 
         location = / {
+            limit_req zone=general burst=15 nodelay;  # Higher for homepage
             content_by_lua_block {
                 local aaa_is_who = require "aaa_is_who"
                 aaa_is_who.route_to_handler("index")
@@ -162,6 +207,7 @@ http {
         }
 
         location = /chat {
+            limit_req zone=general burst=10 nodelay;
             content_by_lua_block {
                 local aaa_is_who = require "aaa_is_who"
                 aaa_is_who.route_to_handler("chat")
@@ -169,14 +215,21 @@ http {
         }
 
         location = /dash {
+            limit_req zone=general burst=10 nodelay;
             content_by_lua_block {
                 local aaa_is_who = require "aaa_is_who"
                 aaa_is_who.route_to_handler("dash")
             }
         }
 
-        # AUTH API routes
+        # =============================================================================
+        # AUTH API ROUTES - STRICT RATE LIMITING
+        # =============================================================================
+        
         location ~ ^/api/auth/(login|logout|register|status)$ {
+            # CRITICAL: Strict rate limiting for auth endpoints
+            limit_req zone=auth burst=3 nodelay;
+            
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
@@ -187,6 +240,11 @@ http {
                 add_header 'Content-Length' 0;
                 return 204;
             }
+            
+            # Standard timeouts for auth
+            proxy_read_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_connect_timeout 10s;
             
             lua_need_request_body on;
             content_by_lua_block {
@@ -195,8 +253,14 @@ http {
             }
         }
 
-        # GUEST API routes
+        # =============================================================================
+        # GUEST API ROUTES - VERY STRICT RATE LIMITING
+        # =============================================================================
+        
         location ~ ^/api/guest/(create-session|create|status)$ {
+            # CRITICAL: Very strict limits for guest session creation
+            limit_req zone=guest burst=1 nodelay;
+            
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
@@ -208,6 +272,11 @@ http {
                 return 204;
             }
             
+            # Standard timeouts for guest creation
+            proxy_read_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_connect_timeout 10s;
+            
             lua_need_request_body on;
             content_by_lua_block {
                 local aaa_is_who = require "aaa_is_who"
@@ -215,16 +284,49 @@ http {
             }
         }
 
-        # CHAT API routes
-        location ~ ^/api/chat/(stream|history|clear|export|search|stats)$ {
+        # =============================================================================
+        # CHAT API ROUTES - CRITICAL RATE LIMITING FOR AI ENDPOINTS
+        # =============================================================================
+        
+        location ~ ^/api/chat/stream$ {
+            # CRITICAL: This was the main vulnerability - now protected
+            limit_req zone=chat burst=5 nodelay;
+            
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
             
-            # EXTENDED TIMEOUTS FOR LONG CHAT RESPONSES
-            proxy_read_timeout 600s;
-            proxy_send_timeout 600s;
-            proxy_connect_timeout 30s;
+            # EXTENDED TIMEOUTS FOR LONG AI RESPONSES
+            proxy_read_timeout 600s;    # 10 minutes for AI generation
+            proxy_send_timeout 600s;    # 10 minutes
+            proxy_connect_timeout 30s;  # Quick connect
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            lua_need_request_body on;
+            content_by_lua_block {
+                local aaa_is_who = require "aaa_is_who"
+                aaa_is_who.route_to_handler("chat_api")
+            }
+        }
+        
+        location ~ ^/api/chat/(history|clear|export|search|stats)$ {
+            # Moderate rate limiting for non-streaming chat APIs
+            limit_req zone=chat burst=10 nodelay;
+            
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            # Standard timeouts for chat management
+            proxy_read_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_connect_timeout 10s;
             
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Max-Age' 1728000;
@@ -240,11 +342,22 @@ http {
             }
         }
 
-        # ADMIN SYSTEM API routes
+        # =============================================================================
+        # ADMIN API ROUTES - MODERATE RATE LIMITING WITH MONITORING
+        # =============================================================================
+        
         location ~ ^/api/admin/(stats|guests)$ {
+            # Moderate rate limiting for admin system APIs
+            limit_req zone=admin burst=5 nodelay;
+            
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            # Standard timeouts for admin operations
+            proxy_read_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_connect_timeout 10s;
             
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Max-Age' 1728000;
@@ -260,11 +373,18 @@ http {
             }
         }
 
-        # ADMIN USER MANAGEMENT API routes
         location ~ ^/api/admin/users(/|/(pending|approve|reject))?$ {
+            # Moderate rate limiting for user management
+            limit_req zone=admin burst=5 nodelay;
+            
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            # Standard timeouts for user management
+            proxy_read_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_connect_timeout 10s;
             
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Max-Age' 1728000;
@@ -280,11 +400,18 @@ http {
             }
         }
 
-        # ADMIN SESSION MANAGEMENT API routes (Redis-based)
         location ~ ^/api/admin/session/(status|force-logout|all|cleanup)$ {
+            # Moderate rate limiting for session management
+            limit_req zone=admin burst=5 nodelay;
+            
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            # Standard timeouts for session management
+            proxy_read_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_connect_timeout 10s;
             
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Max-Age' 1728000;
@@ -300,7 +427,10 @@ http {
             }
         }
 
-        # ERROR PAGES - Use manage_views through aaa_is_who
+        # =============================================================================
+        # ERROR PAGES
+        # =============================================================================
+        
         error_page 404 @custom_404;
         error_page 429 @custom_429;
         error_page 500 502 503 504 @custom_50x;
@@ -329,7 +459,10 @@ http {
             }
         }
 
+        # =============================================================================
         # DEFAULT BLOCK ALL - Everything else returns 404
+        # =============================================================================
+        
         location / {
             return 404;
         }
