client_body_in_single_buffer on;

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -225,10 +225,18 @@ http {
         # =============================================================================
         # AUTH API ROUTES - STRICT RATE LIMITING
         # =============================================================================
-        
+
         location ~ ^/api/auth/(login|logout|register|status)$ {
             # CRITICAL: Strict rate limiting for auth endpoints
             limit_req zone=auth burst=3 nodelay;
+            
+            # CRITICAL: Force body to stay in memory, not disk
+            client_body_buffer_size 1M;
+            client_max_body_size 1M;
+            client_body_in_single_buffer on;
+            
+            # CRITICAL: Enable body reading 
+            lua_need_request_body on;
             
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
@@ -246,7 +254,6 @@ http {
             proxy_send_timeout 30s;
             proxy_connect_timeout 10s;
             
-            lua_need_request_body on;
             content_by_lua_block {
                 local aaa_is_who = require "aaa_is_who"
                 aaa_is_who.route_to_handler("auth_api")
