--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -225,17 +225,18 @@ http {
         # =============================================================================
         # AUTH API ROUTES - STRICT RATE LIMITING
         # =============================================================================
-
+        
         location ~ ^/api/auth/(login|logout|register|status)$ {
             # CRITICAL: Strict rate limiting for auth endpoints
             limit_req zone=auth burst=3 nodelay;
             
-            # CRITICAL: Force body to stay in memory, not disk
+            # CRITICAL FIX: Force body to be kept in memory, not buffered to disk
             client_body_buffer_size 1M;
             client_max_body_size 1M;
             client_body_in_single_buffer on;
+            client_body_in_file_only off;
             
-            # CRITICAL: Enable body reading 
+            # CRITICAL: Enable request body reading
             lua_need_request_body on;
             
             add_header 'Access-Control-Allow-Origin' '*';
