LOACL ADMIN .env SESS

--- a/.env
+++ b/.env
@@ -32,15 +32,15 @@ MODEL_REPEAT_PENALTY=1.1      # Good default
 MODEL_REPEAT_LAST_N=64        # Reasonable lookback
 
 # Context and prediction settings - OPTIMIZED
-MODEL_NUM_CTX=2048            # Increased from 512 - you have 22GB RAM!
+MODEL_NUM_CTX=4096            # Increased from 512 - you have 22GB RAM!
 MODEL_NUM_PREDICT=512         # Increased from 256 - allow longer responses
 MODEL_SEED=0                  # 0 = random seed each time
 
 # Hardware optimization - CORRECTED
-OLLAMA_NUM_THREAD=6           # Matches your CPU allocation
+OLLAMA_NUM_THREAD=3           # Matches your CPU allocation
 OLLAMA_MMAP=false             # Server-level mmap setting - DISABLE FOR BETTER PERFORMANCE
-OLLAMA_NUM_PARALLEL=2         # Reduced from 3 - more stable with limited context
-OLLAMA_GPU_LAYERS=20          # Conservative for 8GB VRAM - test and increase if stable
+OLLAMA_NUM_PARALLEL=1         # 1 chat = more stable with limited context
+OLLAMA_GPU_LAYERS=41          # Conservative for 8GB VRAM - test and increase if stable (MAX 41 layers for this model)
 
 # Ollama server configuration - OPTIMIZED
 OLLAMA_HOST=0.0.0.0:11434
@@ -77,8 +77,8 @@ MAX_PASSWORD_LENGTH=16
 # =============================================================================
 
 # Hardware configuration
-OLLAMA_CPU=6.0
-OLLAMA_MEMORY=22G
+OLLAMA_CPU=3.0
+OLLAMA_MEMORY=16G
 REDIS_MEMORY=1G
 REDIS_CPU=0.5
 NGINX_MEMORY=1G
